--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "prisma": "^5.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
